--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Delanie is a very cute and small little babe!
+---
+layout: home
+title: My website
+subtitle: This is where I will tell my friends way too much about me
+---
