--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./styles.css">
-  <title>Yes</title>
+  <title>Ben Schwartz</title>
 </head>
 <body>
   <h2>Ben Schwartz's 'Website'</h2>
