Trying to remove link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Current stuff that lives here:</p>
     <ul>
 
-       <li>Rowdy <a href="rowdy.html">pics</a> (unfinished)</li>
+       <!-- <li>Rowdy <a href="rowdy.html">pics</a> (unfinished)</li> -->
        <li>Meter NIC Config Tool User guide <a href="https://www.scben.org/docs/aclara/MNCT_userguide">link</a> </li>
     </ul>
 
