--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
 
        <!-- <li>Rowdy <a href="rowdy.html">pics</a> (unfinished)</li> -->
-       <li>Meter NIC Config Tool User guide <a href="https://www.scben.org/docs/aclara/MNCT_userguide">link</a> </li>
+       <li>Meter NIC Config Tool User guide <a href="https://www.scben.org/docs/aclara/index.html">link</a> </li>
     </ul>
 
     
