--- a/rowdy.html
+++ b/rowdy.html
@@ -7,11 +7,35 @@
   <link rel="stylesheet" href="./styles.css">
   <title>Document</title>
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $("#btn1").click(function(){
+      if ($("#test1").text() == "Please hench now") {
+        var s = "";
+        for(let i = 0; i < 100000; i++){
+          s += "hench ";
+        }
+        $("#test1").text(s);
+        $("#btn1").text("Stop henching");
+
+      }
+      else {
+        $("#test1").text("Please hench now");
+        $("#btn1").text("Hench");
+      }
+    });
+  });
+  </script>
 <body>
 
     <img src="/assets/pics/robby1.jpeg" alt="Robby 1" style="width:130px;height:170px;">
     <img src="/assets//pics/robby2.jpeg" alt="Robby 2" style="width:130px;height:170px;">
     <img src="/assets/pics/robby3.jpeg" alt="Robby 3" style="width:130px;height:170px;">
+
+    <button id="btn1">Hench</button>
+    
+    <p id="test1">Please hench now</p>
 
 </body>
 
