--- a/rowdy.html
+++ b/rowdy.html
@@ -28,11 +28,15 @@
   });
   </script>
 <body>
+    <h1>Look it's Cole!</h1>
+    <img src="/assets/pics/cole.jpeg" alt="Robby 1" style="width:130px;height:170px;">
+
+    <h2>robby</h2>
 
     <img src="/assets/pics/robby1.jpeg" alt="Robby 1" style="width:130px;height:170px;">
     <img src="/assets//pics/robby2.jpeg" alt="Robby 2" style="width:130px;height:170px;">
     <img src="/assets/pics/robby3.jpeg" alt="Robby 3" style="width:130px;height:170px;">
-
+    <br></br>
     <button id="btn1">Hench</button>
     
     <p id="test1">Please hench now</p>
